force-app/main/default/objects/bar__Backup_Policy__c/bar__Backup_Policy__c.object-meta.xml
<CustomObject>
    <label>Backup Policy</label>
    <nameField>
        <label>Backup Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backup Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>