force-app/main/default/objects/bar__Backup_Policy__c/fields/bar__Backup_Attachments__c.field-meta.xml
<CustomField>
    <fullName>bar__Backup_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backup Attachments (not used)</label>
    <type>Checkbox</type>
</CustomField>