force-app/main/default/objects/bar__Backup_Policy__c/fields/bar__Backup_Files__c.field-meta.xml
<CustomField>
    <fullName>bar__Backup_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backup Files</label>
    <type>Checkbox</type>
</CustomField>