force-app/main/default/objects/bar__Backup_Policy__c/fields/bar__Backup_Files_Min_Date__c.field-meta.xml
<CustomField>
    <fullName>bar__Backup_Files_Min_Date__c</fullName>
    <label>Backup Files Min Date</label>
    <type>Date</type>
</CustomField>