force-app/main/default/objects/bar__Backup_Policy__c/fields/bar__Description__c.field-meta.xml
<CustomField>
    <fullName>bar__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>