force-app/main/default/objects/bar__Backup_Policy__c/fields/bar__Type__c.field-meta.xml
<CustomField>
    <fullName>bar__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>