force-app/main/default/objects/bar__Backup_Policy__c/listViews/bar__All_Backup_Policies.listView-meta.xml
<ListView>
    <fullName>bar__All_Backup_Policies</fullName>
    <columns>NAME</columns>
    <columns>bar__Active__c</columns>
    <columns>bar__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Backup Policies</label>
</ListView>